Added content negotiation basic model that supports serialisation to different fprmats and basic contoller that supports content negotiation

--- a/app/view/template/Error/config.ini
+++ b/app/view/template/Error/config.ini
@@ -3,6 +3,13 @@ assetPath="app/assets/"
 [Assets]
 ;js[] = ""
 css[] ="error.css"
-css[] ="app.css"
+cdnJs[]="//code.jquery.com/jquery-1.10.2.min.js"
+cdnJs[]="//netdna.bootstrapcdn.com/bootstrap/3.0.1/js/bootstrap.min.js"
+cdnJs[]="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"
+js[]="app.js"
+;css[] =""
 cdnCss[]="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css"
+cdnCss[]="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"
+
+css[]="app.css"
 ;cdnJs[]=
